--- a/src/main/resources/dev/fraco/minikeep/trash.fxml
+++ b/src/main/resources/dev/fraco/minikeep/trash.fxml
@@ -1,38 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Trash">
-    <VBox prefHeight="600.0" prefWidth="801.0">
-        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="802.0" spacing="50.0">
-            <Button onAction="#backHandler" mnemonicParsing="false" text="Volver Atras">
-            <HBox.margin>
-               <Insets left="20.0" />
-            </HBox.margin></Button>
-        </HBox>
-        <Label text="Doble click para eliminar permanentemente">
-            <VBox.margin>
-                <Insets left="10.0" top="20.0" />
-            </VBox.margin></Label>
-        <TableView fx:id="notesTable" editable="true" prefHeight="516.0" prefWidth="802.0">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #1d2021;" stylesheets="@css/styles.css"
+            xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="dev.fraco.minikeep.controllers.Trash">
+    <HBox layoutX="145.0" layoutY="73.0" prefHeight="572.0" prefWidth="990.0" spacing="30.0"
+          style="-fx-background-color: #282828;" styleClass="pretty-box">
+        <padding>
+            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0"/>
+        </padding>
+        <TableView fx:id="notesTable" editable="true" prefHeight="485.0" prefWidth="1229.0" styleClass="pretty-box">
             <columns>
-                <TableColumn fx:id="colHeader" onEditStart="#deleteNote" prefWidth="211.44286853075027" text="Titulo" />
-                <TableColumn fx:id="colPriority" onEditStart="#deleteNote" prefWidth="310.1827850341797" text="Prioridad" />
-                <TableColumn fx:id="colTags" onEditStart="#deleteNote" prefWidth="77.7950439453125" text="Tags" />
-                <TableColumn fx:id="colColor" onEditStart="#deleteNote" prefWidth="59.84228515625" text="Color" />
-                <TableColumn fx:id="colCreated" onEditStart="#deleteNote" prefWidth="69.8160400390625" text="Creada" />
-                <TableColumn fx:id="colEdited" onEditStart="#deleteNote" prefWidth="62.83447265625" text="Editada" />
+                <TableColumn fx:id="colColor" prefWidth="29.92108064889908" text="Color"/>
+                <TableColumn fx:id="colHeader" prefWidth="208.45084762573242" text="Titulo"/>
+                <TableColumn fx:id="colTags" prefWidth="178.52963256835938" text="Tags"/>
+                <TableColumn fx:id="colPriority" prefWidth="90.76092529296875" text="Prioridad"/>
+                <TableColumn fx:id="colCreated" prefWidth="81.78457641601562" text="Creada"/>
+                <TableColumn fx:id="colEdited" prefWidth="112.7030029296875" text="Editada"/>
             </columns>
             <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
             </columnResizePolicy>
         </TableView>
-    </VBox>
+        <VBox alignment="CENTER" prefHeight="38.0" prefWidth="696.0" spacing="50.0">
+            <Button onAction="#recoverAll" mnemonicParsing="false" prefWidth="200.0" styleClass="common-btn"
+                    text="Recuperar Todas"/>
+            <Button fx:id="recover" onAction="#recoverOne" mnemonicParsing="false" prefHeight="27.0" prefWidth="200.0"
+                    styleClass="common-btn" text="Recuperar"/>
+            <Button onAction="#deleteAll" mnemonicParsing="false" prefWidth="200.0" text="Eliminar Todas">
+                <styleClass>
+                    <String fx:value="common-btn"/>
+                    <String fx:value="error-btn"/>
+                </styleClass>
+            </Button>
+            <Button fx:id="deleteBtn" onAction="#deleteOne" mnemonicParsing="false" prefHeight="27.0" prefWidth="200.0"
+                    text="Eliminar">
+                <styleClass>
+                    <String fx:value="common-btn"/>
+                    <String fx:value="error-btn"/>
+                </styleClass>
+            </Button>
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#backHandler" prefWidth="200.0"
+                    text="Volver Atras">
+                <styleClass>
+                    <String fx:value="common-btn"/>
+                    <String fx:value="error-btn"/>
+                </styleClass>
+            </Button>
+        </VBox>
+    </HBox>
 </AnchorPane>
