--- a/src/main/resources/dev/fraco/minikeep/showPassword.fxml
+++ b/src/main/resources/dev/fraco/minikeep/showPassword.fxml
@@ -10,7 +10,7 @@
     <VBox alignment="CENTER" layoutX="345.0" layoutY="201.0" prefHeight="318.0" prefWidth="589.0" spacing="20.0"
           style="-fx-background-color: #282828;" styleClass="pretty-box" stylesheets="@css/styles.css">
         <Label style="-fx-text-fill: #fff; -fx-font-size: 34px;" text="Su Contraseña"/>
-        <Label style="-fx-text-fill: #ccc;" text="NUNCA LA VOLVERA A VER"/>
+        <Label style="-fx-text-fill: #ccc;" text="NUNCA LA VOLVERÁ A VER"/>
         <Label fx:id="password" alignment="CENTER" contentDisplay="CENTER" prefHeight="81.0" prefWidth="272.0"
                style="-fx-text-fill: #ffcb00; -fx-font-size: 28px; -fx-background-color: #1d2020; -fx-font-weight: bold;"
                text="Fc100704" textAlignment="CENTER">
