--- a/src/main/resources/dev/fraco/minikeep/trash.fxml
+++ b/src/main/resources/dev/fraco/minikeep/trash.fxml
@@ -3,56 +3,54 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #1d2021;" stylesheets="@css/styles.css"
-            xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="dev.fraco.minikeep.controllers.Trash">
-    <HBox layoutX="145.0" layoutY="73.0" prefHeight="572.0" prefWidth="990.0" spacing="30.0"
-          style="-fx-background-color: #282828;" styleClass="pretty-box">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #1d2021;" stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Trash">
+    <HBox layoutX="145.0" layoutY="73.0" prefHeight="572.0" prefWidth="990.0" spacing="30.0" style="-fx-background-color: #282828;" styleClass="pretty-box">
         <padding>
-            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0"/>
+            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
         </padding>
-        <TableView fx:id="notesTable" editable="true" prefHeight="485.0" prefWidth="1229.0" styleClass="pretty-box">
+        <TableView fx:id="notesTable" editable="true" prefHeight="485.0" prefWidth="1229.0" style="-fx-background-color: #1d2022;">
+            <placeholder>
+                <Label text="No hay notas en la tabla" />
+            </placeholder>
             <columns>
-                <TableColumn fx:id="colColor" prefWidth="29.92108064889908" text="Color"/>
-                <TableColumn fx:id="colHeader" prefWidth="208.45084762573242" text="Titulo"/>
-                <TableColumn fx:id="colTags" prefWidth="178.52963256835938" text="Tags"/>
-                <TableColumn fx:id="colPriority" prefWidth="90.76092529296875" text="Prioridad"/>
-                <TableColumn fx:id="colCreated" prefWidth="81.78457641601562" text="Creada"/>
-                <TableColumn fx:id="colEdited" prefWidth="112.7030029296875" text="Editada"/>
+                <TableColumn fx:id="colColor" prefWidth="20.0" reorderable="false" resizable="false" />
+                <TableColumn fx:id="colHeader" prefWidth="260.0" reorderable="false" resizable="false" text="Título" />
+                <TableColumn fx:id="colTags" prefWidth="90.0" reorderable="false" resizable="false" text="Tema" />
+                <TableColumn fx:id="colPriority" prefWidth="90.0" reorderable="false" resizable="false" text="Prioridad" />
+                <TableColumn fx:id="colCreated" prefWidth="110.0" reorderable="false" resizable="false" text="Creada" />
+                <TableColumn fx:id="colEdited" prefWidth="110.0" reorderable="false" resizable="false" text="Editada" />
             </columns>
             <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                <TableView fx:constant="UNCONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
         </TableView>
         <VBox alignment="CENTER" prefHeight="38.0" prefWidth="696.0" spacing="50.0">
-            <Button onAction="#recoverAll" mnemonicParsing="false" prefWidth="200.0" styleClass="common-btn"
-                    text="Recuperar Todas"/>
-            <Button fx:id="recover" onAction="#recoverOne" mnemonicParsing="false" prefHeight="27.0" prefWidth="200.0"
-                    styleClass="common-btn" text="Recuperar"/>
-            <Button onAction="#deleteAll" mnemonicParsing="false" prefWidth="200.0" text="Eliminar Todas">
+         <Label style="-fx-text-fill: #ddc7a1; -fx-font-weight: bold; -fx-font-size: 28px;" text="Papelera" />
+            <Button mnemonicParsing="false" onAction="#recoverAll" prefWidth="200.0" styleClass="common-btn" text="Recuperar Todas" />
+            <Button fx:id="recover" mnemonicParsing="false" onAction="#recoverOne" prefHeight="27.0" prefWidth="200.0" styleClass="common-btn" text="Recuperar" />
+            <Button mnemonicParsing="false" onAction="#deleteAll" prefWidth="200.0" text="Eliminar Todas">
                 <styleClass>
-                    <String fx:value="common-btn"/>
-                    <String fx:value="error-btn"/>
+                    <String fx:value="common-btn" />
+                    <String fx:value="error-btn" />
                 </styleClass>
             </Button>
-            <Button fx:id="deleteBtn" onAction="#deleteOne" mnemonicParsing="false" prefHeight="27.0" prefWidth="200.0"
-                    text="Eliminar">
+            <Button fx:id="deleteBtn" mnemonicParsing="false" onAction="#deleteOne" prefHeight="27.0" prefWidth="200.0" text="Eliminar">
                 <styleClass>
-                    <String fx:value="common-btn"/>
-                    <String fx:value="error-btn"/>
+                    <String fx:value="common-btn" />
+                    <String fx:value="error-btn" />
                 </styleClass>
             </Button>
-            <Button cancelButton="true" mnemonicParsing="false" onAction="#backHandler" prefWidth="200.0"
-                    text="Volver Atras">
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#backHandler" prefWidth="200.0" text="Volver Atrás">
                 <styleClass>
-                    <String fx:value="common-btn"/>
-                    <String fx:value="error-btn"/>
+                    <String fx:value="common-btn" />
+                    <String fx:value="error-btn" />
                 </styleClass>
             </Button>
         </VBox>
