--- a/src/main/resources/dev/fraco/minikeep/createNote.fxml
+++ b/src/main/resources/dev/fraco/minikeep/createNote.fxml
@@ -16,8 +16,8 @@
 <?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #1d2021;" stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.CreateNote">
-    <VBox layoutX="366.0" layoutY="68.0" prefHeight="551.0" prefWidth="547.0" style="-fx-background-color: #282828;" styleClass="pretty-box">
-        <Label styleClass="input-label" text="Título" textFill="WHITE">
+    <VBox layoutX="365.0" layoutY="52.0" prefHeight="615.0" prefWidth="549.0" style="-fx-background-color: #282828;" styleClass="pretty-box">
+        <Label styleClass="input-label" text="Título">
         </Label>
         <TextField fx:id="titleInput" onKeyTyped="#titleHandler" styleClass="common-text-input">
             <VBox.margin>
@@ -25,14 +25,14 @@
             </VBox.margin>
         </TextField>
         <Label fx:id="headerCounter" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="19.0" prefWidth="496.0" text="0/30" textAlignment="RIGHT" textFill="#b6b6b6" />
-        <Label styleClass="input-label" text="Tema" textFill="WHITE">
+        <Label styleClass="input-label" text="Tema">
         </Label>
         <TextField fx:id="tagsInput" styleClass="common-text-input">
             <VBox.margin>
                 <Insets bottom="10.0" />
             </VBox.margin>
         </TextField>
-        <Label styleClass="input-label" text="Cuerpo" textFill="WHITE">
+        <Label styleClass="input-label" text="Cuerpo">
         </Label>
         <TextArea fx:id="bodyInput" onKeyTyped="#bodyHandler" prefHeight="139.0" prefWidth="493.0" wrapText="true">
             <VBox.margin>
@@ -42,24 +42,24 @@
         <Label fx:id="bodyCounter" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="19.0" prefWidth="496.0" text="0/200" textAlignment="RIGHT" textFill="#b6b6b6" />
         <HBox alignment="CENTER" prefHeight="54.0" prefWidth="493.0" spacing="20.0">
             <VBox prefHeight="67.0" prefWidth="246.0">
-                <Label styleClass="input-label" text="Color" textFill="WHITE">
+                <Label styleClass="input-label" text="Color">
                 </Label>
-                <ColorPicker fx:id="colorInput" styleClass="common-text-input">
+                <ColorPicker fx:id="colorInput" onAction="#changeColorHandler" styleClass="common-text-input">
                     <VBox.margin>
                         <Insets bottom="10.0" />
                     </VBox.margin>
                     <value>
-                        <Color red="0.7538405656814575" green="0.007187230046838522" blue="0.7795872092247009" />
+                        <Color red="1.0" green="0.7333333492279053" />
                     </value>
                 </ColorPicker>
             </VBox>
             <VBox prefHeight="200.0" prefWidth="250.0">
-                <Label styleClass="input-label" text="Prioridad" textFill="WHITE">
+                <Label styleClass="input-label" text="Prioridad">
                 </Label>
                 <ChoiceBox fx:id="priorityCombo" prefWidth="150.0" styleClass="common-text-input" />
             </VBox>
             <VBox prefHeight="200.0" prefWidth="250.0">
-                <Label styleClass="input-label" text="Recordatorio" textFill="WHITE">
+                <Label styleClass="input-label" text="Recordatorio">
                 </Label>
                 <DatePicker fx:id="reminderPicker">
                     <VBox.margin>
@@ -71,7 +71,7 @@
             <Insets top="5.0" />
          </VBox.margin>
         </HBox>
-        <Label styleClass="input-label" text="Colaboradores (email separados por coma)" textFill="WHITE">
+        <Label styleClass="input-label" text="Colaboradores (email separados por coma)">
 
         </Label>
         <TextField fx:id="collaboratorsInput" styleClass="common-text-input">
@@ -79,11 +79,11 @@
                 <Insets bottom="10.0" />
             </VBox.margin>
         </TextField>
-        <HBox fx:id="errorBox" alignment="CENTER" prefHeight="58.0" prefWidth="300.0" style="-fx-background-color: #FF0D4B; -fx-border-radius: 8;" visible="false">
+        <HBox fx:id="errorBox" alignment="CENTER" prefHeight="58.0" prefWidth="300.0" style="-fx-background-color: #EA6962;" visible="false">
             <VBox.margin>
                 <Insets bottom="20.0" top="10.0" />
             </VBox.margin>
-            <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="26.0" prefWidth="501.0" text="Error en email y/o contraseña" textAlignment="CENTER" textFill="#fff9e9" wrapText="true">
+            <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="26.0" prefWidth="501.0" style="-fx-font-size: 14px; -fx-font-weight: bold;" text="Error en email y/o contraseña" textAlignment="CENTER" textFill="#282828" wrapText="true">
             <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
@@ -104,5 +104,5 @@
             <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
         </padding>
     </VBox>
-   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffbb00" height="19.0" layoutX="365.0" layoutY="68.0" stroke="BLACK" strokeType="INSIDE" width="548.0" />
+   <Rectangle fx:id="colorBar" arcHeight="5.0" arcWidth="5.0" fill="#ffbb00" height="19.0" layoutX="364.0" layoutY="51.0" width="550.0" />
 </AnchorPane>
