--- a/src/main/resources/dev/fraco/minikeep/workspace.fxml
+++ b/src/main/resources/dev/fraco/minikeep/workspace.fxml
@@ -22,7 +22,7 @@
             <padding>
                 <Insets left="20.0" right="120.0" />
             </padding>
-            <TextField fx:id="searchBar" onKeyPressed="#moveHandler" onKeyTyped="#searchHandler" prefHeight="28.0" prefWidth="476.0" promptText="Buscar entre las notas" style="-fx-background-color: #1D2021; -fx-text-fill: #D4BE98;" styleClass="common-text-input" stylesheets="@css/styles.css">
+            <TextField fx:id="searchBar" onKeyPressed="#moveHandler" onKeyTyped="#searchHandler" prefHeight="28.0" prefWidth="476.0" promptText="Buscar entre las notas" styleClass="common-text-input" stylesheets="@css/styles.css">
             <VBox.margin>
                <Insets />
             </VBox.margin>
@@ -118,11 +118,11 @@
                 </VBox.margin>
             </TextField>
          <CheckBox fx:id="endedCheckBox" mnemonicParsing="false" styleClass="input-label" text="Terminada" textFill="#d7c29c" />
-            <HBox fx:id="errorBox" alignment="CENTER" prefHeight="45.0" prefWidth="478.0" style="-fx-background-color: #FF0D4B; -fx-border-radius: 8;" visible="false">
+            <HBox fx:id="errorBox" alignment="CENTER" prefHeight="45.0" prefWidth="478.0" style="-fx-background-color: #ea6962;" visible="false">
                 <VBox.margin>
                     <Insets bottom="20.0" top="10.0" />
                 </VBox.margin>
-                <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="26.0" prefWidth="501.0" text="Error en email y/o contraseña" textAlignment="CENTER" textFill="#fff9e9" wrapText="true">
+                <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="26.0" prefWidth="501.0" style="-fx-font-size: 14px; -fx-font-weight: bold;" text="Error en email y/o contraseña" textAlignment="CENTER" textFill="#282828" wrapText="true">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
